# Noisia

./: Cargo.toml  CurrentElements.md  Elements.md  MissingFeatures.md  Missing_Features_By_Grok.md  Noisia_Syntax.md  Types.md  curr_methods.md  fixplan.md  main.nx  plan.md
backup/: parser.rs  ptypes.rs  tokenizer.rs
src/: lib.rs  main.rs  parser.rs  ptypes.rs  style.rs  tokenizer.rs
src/interpreter/: error.rs  expressions.rs  inkwell_backend.rs  jit.rs  mod.rs  patterns.rs  runtime.rs  statements.rs  temporal.rs  value.rs
src/parser/: mod.rs
src/parser/class/: mod.rs  parse_class.rs  parse_class_delegate.rs  parse_class_field_or_property.rs  parse_class_inheritance.rs  parse_constructor.rs  parse_operator_method.rs  parse_property_accessors.rs
src/parser/core/: advance.rs  error_here.rs  expect.rs  expect_gt.rs  expect_ident_like.rs  expect_nv.rs  expect_word.rs  is_at_end.rs  is_checkpoint_stmt_start.rs  is_function_modifier_keyword.rs  is_function_start.rs  is_phrase_token.rs  is_word.rs  match_gt.rs  match_one.rs  match_tnv.rs  match_word.rs  mod.rs  new.rs  parse_attributes.rs  parse_comma_separated.rs  parse_program.rs  parse_visibility.rs  peek.rs
src/parser/expressions/: attach_trailing_closure_arg.rs  find_list_comp_pipe.rs  find_slice_operator.rs  mod.rs  (+26 more)
tests/: 1.nx  parser_differential.rs  parser_fixtures.rs
tests/parser/: 1.nx  10-pointer-ops.nx  11-class-advanced.nx  12-temporal-40-45.nx  13-advanced-syntax.nx  2.nx  3.nx  4.nx  5.nx  6-control-flow.nx  7-range-slice-optchain.nx  8-macro-igm-extension.nx  9-context-using-constexpr.nx
(+100 files in other folders)
